# finity

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  compilation_config.h  compilation_config.h.in  finity_main.cpp
test/: CMakeLists.txt  test_body.cpp
